--- a/src/main/resources/templates/layout/base.html
+++ b/src/main/resources/templates/layout/base.html
@@ -31,7 +31,7 @@
                 
                 <!-- Page Title -->
                 <div class="flex-1 text-center">
-                    <h1 class="text-lg font-semibold text-gray-900" th:text="${pageTitle} ?: #{zones}">Strefy</h1>
+                    <h1 class="text-lg font-semibold text-gray-900" th:text="${pageTitle} ?: #{zones_title}">Strefy</h1>
                 </div>
                 
                 <!-- Right Side Actions -->
